--- a/BethanysPieShop/appsettings.json
+++ b/BethanysPieShop/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=Database.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
