--- a/FlyingDutchmanAirlinesNextGen/FlyingDutchmanAirlines/FlyingDutchmanAirlines.csproj
+++ b/FlyingDutchmanAirlinesNextGen/FlyingDutchmanAirlines/FlyingDutchmanAirlines.csproj
@@ -9,4 +9,12 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+  </ItemGroup>
+
 </Project>
